// 战斗服务器
syntax = "proto3";

package battle;

// 战斗服务
service BattleService
{
    // 玩家操作
    rpc PlayerAction(PlayerActionRequest) returns (PlayerActionResponse);
    // 获取战斗结果
    rpc GetBattleResult(GetBattleResultRequest) returns (GetBattleResultResponse);
}

// 玩家操作消息
message PlayerAction
{
    int32 player_id = 1;
    string action_type = 2;
    string action_data = 3;
}

// 对战结果消息
message BattleResult
{
    int32 winner_id = 1;
    int32 loser_id = 2;
    string result_data = 3;
}

// 请求和响应消息
message PlayerActionReq
{
    PlayerAction action = 1;
}
message PlayerActionRes
{
    bool success = 1;
    string message = 2;
}

message GetBattleResultRequest
{
    int32 battle_id = 1;
}
message GetBattleResultResponse
{
    BattleResult result = 1;
}

